# tenxsom_ai.com

./: .env.production  .gitignore  402-error-research-plan.md  AGENTIC_PLATFORM_INTEGRATION_COMPLETE.md  AWS_BACKUP_SETUP.md  AWS_WEBSITE_DEPLOYMENT_PLAN.md  CLAUDE.md  CLOUD_MIGRATION_COMPLETE.md  CLOUD_TASKS_DEPLOYMENT_GUIDE.md  Channel idea Level One Citizen -.txt  Dockerfile  Dockerfile.content-pipeline  Dockerfile.platform-agents  Google Vertex AI_LTXStudioTutorialManifest.txt  Google_Failover_Implementation_Report.md  Integration_Progress_Update.md  LAUNCH_SUCCESS.md  LIVE_DEPLOYMENT_SUCCESS.md  MTR_RC_Progress_Summary.md  MULTI-ACCOUNT-SCALING-STRATEGY.md  MiniMax_Investigation_Final_Report.md  PHASE1_STATUS.md  PRODUCTION-INTEGRATION-SUMMARY.md  PRODUCTION_ARCHITECTURE.md  PRODUCTION_LAUNCH_REPORT.md  PRODUCTION_LAUNCH_SUMMARY.md  PRODUCTION_READINESS_VERIFICATION.md  PRODUCTION_READY_CHECKLIST.md  PROJECT_COMPLETION_SUMMARY.md  Production config.txt  Project_Status_Summary.md  QUEUE_MIGRATION_GUIDE.md  README.md  Readme.md  SECURITY-AND-MONITORING-GUIDE.md  TECHNICAL_ARCHITECTURE_MANIFEST.md  USEAPI-MCP-INTEGRATION-COMPLETE.md  USEAPI_ENDPOINT_UPDATE.md  UseAPI_522_Analysis_Report.md  UseAPI_522_Resolution_Report.md  (+154 more)
useapi-mcp-server/: Dockerfile  README.md  basic_app.py  cloudbuild.yaml  pyproject.toml  requirements.txt  requirements_backup.txt  service-deployed.yaml  service.yaml  setup.py
useapi-mcp-server/examples/: claude_desktop_config.json  workflow_examples.py
useapi-mcp-server/src/useapi_mcp_server/: __init__.py  __main__.py  basic_main.py  client.py  (+8 more)
(+438 files in other folders)
