[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "useapi-mcp-server"
version = "1.0.0"
description = "Model Context Protocol server for UseAPI.net AI services"
authors = [
    {name = "Tenxsom AI", email = "goldensonproperties@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "asyncio-throttle>=1.0.2",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/tenxsom-ai/useapi-mcp-server"
Repository = "https://github.com/tenxsom-ai/useapi-mcp-server"
Documentation = "https://github.com/tenxsom-ai/useapi-mcp-server#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/useapi_mcp_server"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]